// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Default 1`] = `
<div
  className="root"
>
  <div
    className="fields"
  >
    <div
      className="root"
      title="Field A"
    >
      <input
        autoComplete="off"
        className="field"
        disabled={false}
        onChange={[Function]}
        placeholder="Field A"
        spellCheck={false}
        type="text"
        value=""
      />
    </div>
    <div
      className="root"
      title="Field B"
    >
      <input
        autoComplete="off"
        className="field"
        disabled={false}
        onChange={[Function]}
        placeholder="Field B"
        spellCheck={false}
        type="number"
        value=""
      />
    </div>
  </div>
  <button
    className="root disabled"
    disabled={true}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots Form Incomplete 1`] = `
<div
  className="root"
>
  <div
    className="fields"
  >
    <div
      className="root"
      title="Field A"
    >
      <input
        autoComplete="off"
        className="field"
        disabled={false}
        onChange={[Function]}
        placeholder="Field A"
        spellCheck={false}
        type="text"
        value="test"
      />
    </div>
    <div
      className="root"
      title="Field B"
    >
      <input
        autoComplete="off"
        className="field"
        disabled={false}
        onChange={[Function]}
        placeholder="Field B"
        spellCheck={false}
        type="number"
        value=""
      />
    </div>
  </div>
  <button
    className="root disabled"
    disabled={true}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots Form Invalid 1`] = `
<div
  className="root"
>
  <div
    className="fields"
  >
    <div
      className="root"
      title="Field A"
    >
      <input
        autoComplete="off"
        className="field"
        disabled={false}
        onChange={[Function]}
        placeholder="Field A"
        spellCheck={false}
        type="text"
        value="test"
      />
    </div>
    <div
      className="root"
      title="Field B"
    >
      <input
        autoComplete="off"
        className="field error"
        disabled={false}
        onChange={[Function]}
        placeholder="Field B"
        spellCheck={false}
        type="number"
        value="test"
      />
      <div
        className="validationAlert"
        title="Validation error"
      >
        !
      </div>
    </div>
  </div>
  <button
    className="root disabled"
    disabled={true}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots Form Valid 1`] = `
<div
  className="root"
>
  <div
    className="fields"
  >
    <div
      className="root"
      title="Field A"
    >
      <input
        autoComplete="off"
        className="field"
        disabled={false}
        onChange={[Function]}
        placeholder="Field A"
        spellCheck={false}
        type="text"
        value="test"
      />
    </div>
    <div
      className="root"
      title="Field B"
    >
      <input
        autoComplete="off"
        className="field"
        disabled={false}
        onChange={[Function]}
        placeholder="Field B"
        spellCheck={false}
        type="number"
        value={100}
      />
    </div>
  </div>
  <button
    className="root"
    disabled={false}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots FormButton Default 1`] = `
<button
  className="root"
  disabled={false}
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots FormButton Disabled 1`] = `
<button
  className="root disabled"
  disabled={true}
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots FormButton Loading 1`] = `
<button
  className="root loading"
  disabled={false}
  onClick={[Function]}
>
  Loading...
</button>
`;

exports[`Storyshots FormField Default 1`] = `
<div
  className="root"
  title="Field"
>
  <input
    autoComplete="off"
    className="field"
    disabled={false}
    onChange={[Function]}
    placeholder="Field"
    spellCheck={false}
    value=""
  />
</div>
`;

exports[`Storyshots FormField Invalid 1`] = `
<div
  className="root"
  title="Field"
>
  <input
    autoComplete="off"
    className="field error"
    disabled={false}
    onChange={[Function]}
    placeholder="Field"
    spellCheck={false}
    value="Test"
  />
  <div
    className="validationAlert"
    title="Validation error"
  >
    !
  </div>
</div>
`;

exports[`Storyshots FormField Valid 1`] = `
<div
  className="root"
  title="Field"
>
  <input
    autoComplete="off"
    className="field"
    disabled={false}
    onChange={[Function]}
    placeholder="Field"
    spellCheck={false}
    value="1234"
  />
</div>
`;

exports[`Storyshots FormNotification Default 1`] = `
<div
  className="root"
>
  Test message
</div>
`;
